<resources>
    <string name="app_name">Transer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="simple_download">简单下载</string>
    <string name="simple_upload">简单上传</string>
    <string name="create_task">创建任务</string>
    <string name="upload_tasks_list">上传任务列表</string>
    <string name="download_tasks_list">下载任务列表</string>
    <string name="server_file_list">服务器文件列表</string>
    <string name="local_file_list">本地文件列表</string>
    <string name="task_failed">任务失败</string>
    <string name="task_wait">正在等待...</string>
    <string name="task_event_bus">任务事件管理器使用</string>
    <string name="task_eventbus_create">使用TaskEventBus创建任务</string>
    <string name="dynamic_proxy_create">使用ITaskProcessor动态代理创建</string>
    <string name="upload">上传</string>
    <string name="download">下载</string>
    <string name="select">选择</string>
    <string name="select_all">全选</string>
    <string name="cancel">取消</string>
    <string name="completed">完成</string>
    <string name="cancel_select_all">取消全选</string>
    <string name="task_group_manage">任务分组管理</string>
    <string name="task_upload_formpart">FormPart单个上传</string>
</resources>
